--- a/index.html
+++ b/index.html
@@ -3,51 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Star Wars: X-Wing Death Star Run</title>
+    <title>DeathStar - 3D Space Shooter</title>
     <style>
       body {
         margin: 0;
         overflow: hidden;
-        background-color: #000;
+        background-color: black;
       }
       canvas {
         display: block;
       }
-      #loadingScreen {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: #000;
-        color: #ffe81f;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        font-family: 'Arial', sans-serif;
-        z-index: 100;
-      }
-      #loadingScreen h1 {
-        font-size: 2.5em;
-        margin-bottom: 20px;
-      }
     </style>
   </head>
   <body>
-    <div id="loadingScreen">
-      <h1>Star Wars: X-Wing Death Star Run</h1>
-      <p>Loading game assets...</p>
-    </div>
-
-    <script type="importmap">
-      {
-        "imports": {
-          "three": "https://unpkg.com/three@0.158.0/build/three.module.js",
-          "three/addons/": "https://unpkg.com/three@0.158.0/examples/jsm/"
-        }
-      }
-    </script>
-    <script type="module" src="js/main.js"></script>
+    <script type="module" src="/src/js/main.js"></script>
   </body>
 </html>
